Replace outdated stream syntax.